--- a/todo
+++ b/todo
@@ -1,2 +1,3 @@
 react-redux connected component rerender when no store changes and ownProps are shallow equal
 arrays and shallow equal
+func bind in prop (<Child onClick={this.handleClick.bind(this)} />)
